--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <aside></aside>
+    <footer></footer>
 </body>
 </html>
