Сделана общая вёрстка

--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="w3.css">
+    <title>Plants</title>
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <header class="w3-display-container w3-text-white">
+        <h1 class="w3-display-middle w3-center w3-jumbo">
+            Энциклопедия растений
+        </h1>
+    </header>
+    <main class="w3-container w3-threequarter">
+        <div class="w3-row-padding w3-section">
+            <div class="w3-half">
+                <section class="w3-card-4 w3-container w3-light-green">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
+                    <div class="w3-half w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+            <div class="w3-half">
+                <section class="w3-card w3-container w3-light-green">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
+                    <div class="w3-half w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div class="w3-row-padding w3-section">
+            <div class="w3-half">
+                <section class="w3-card w3-container w3-light-green">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
+                    <div class="w3-half w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+            <div class="w3-half">
+                <section class="w3-card w3-container w3-light-green">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
+                    <div class="w3-half w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
+    <aside class="w3-container w3-quarter">
+        <div class="w3-card w3-section">Aside</div>
+    </aside>
+    <footer class="w3-section w3-col w3-green">
+        Footer
+    </footer>
 </body>
+
 </html>
