Добавлен календарь, стили перемещены в папку css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="w3.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="css/w3-theme-green.css">
     <title>Plants</title>
 </head>
 
@@ -19,8 +20,8 @@
         <div class="w3-row-padding w3-section">
             <div class="w3-half">
                 <section class="w3-card-4 w3-container w3-light-green">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
-                    <div class="w3-half w3-padding">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
                     </div>
@@ -28,8 +29,8 @@
             </div>
             <div class="w3-half">
                 <section class="w3-card w3-container w3-light-green">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
-                    <div class="w3-half w3-padding">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
                     </div>
@@ -39,8 +40,8 @@
         <div class="w3-row-padding w3-section">
             <div class="w3-half">
                 <section class="w3-card w3-container w3-light-green">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
-                    <div class="w3-half w3-padding">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
                     </div>
@@ -48,8 +49,8 @@
             </div>
             <div class="w3-half">
                 <section class="w3-card w3-container w3-light-green">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-half">
-                    <div class="w3-half w3-padding">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
                     </div>
@@ -58,7 +59,31 @@
         </div>
     </main>
     <aside class="w3-container w3-quarter">
-        <div class="w3-card w3-section">Aside</div>
+        <div class="w3-card w3-section w3-light-green">
+            <p class="w3-xlarge w3-center">Календарь цветения</p>
+                <ul class="w3-container w3-ul">
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-blue w3-large w3-center">5 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Тополь</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-blue w3-large w3-center">12 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Ива</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-blue w3-large w3-center">19 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Вяз</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-blue w3-large w3-center">26 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Липа</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                </ul>
+        </div>
     </aside>
     <footer class="w3-section w3-col w3-green">
         Footer
