--- a/index.html
+++ b/index.html
@@ -4,22 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="css/w3-theme-green.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="main.js"></script>
     <title>Plants</title>
 </head>
 
 <body>
     <header class="w3-display-container w3-text-white">
-        <h1 class="w3-display-middle w3-center w3-jumbo">
+        <h1 class="w3-display-middle w3-center w3-jumbo back-black-opacity w3-text-theme w3-round-large">
             Энциклопедия растений
         </h1>
     </header>
-    <main class="w3-container w3-threequarter">
+    <menu class="w3-bar w3-theme-d2 w3-top">
+        <a href="#" class="w3-bar-item w3-button w3-hover-theme">Главная</a>
+        <div class="w3-dropdown-hover">
+          <a href="" class="w3-button w3-hover-theme">Каталог</a>
+          <div class="w3-dropdown-content w3-bar-block w3-card-4 fixed w3-theme-d2">
+            <a href="#" class="w3-bar-item w3-button w3-hover-theme">Научная классификация</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-theme">По жизненной форме</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-theme">По времени цветения</a>
+          </div>
+        </div>
+        <a href="" class="w3-bar-item w3-button w3-hover-theme">О нас</a>
+        <div class="w3-dropdown-click">
+            <a class="material-icons w3-button w3-hover-theme" onclick="showDropdown('search')">search</a>
+            <div class="w3-dropdown-content w3-bar-block w3-card-4 fixed w3-theme-d2" id="search">
+                <input type="search" class="w3-bar-item" placeholder="Поиск по каталогу">
+            </div>
+        </div>
+    </menu>
+    <main class="w3-container w3-col l9 m12">
         <div class="w3-row-padding w3-section">
             <div class="w3-half">
-                <section class="w3-card-4 w3-container w3-light-green">
+                <section class="w3-card-4 w3-container w3-theme w3-margin-top">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
@@ -28,7 +48,7 @@
                 </section>
             </div>
             <div class="w3-half">
-                <section class="w3-card w3-container w3-light-green">
+                <section class="w3-card w3-container w3-theme w3-margin-top">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
@@ -39,7 +59,7 @@
         </div>
         <div class="w3-row-padding w3-section">
             <div class="w3-half">
-                <section class="w3-card w3-container w3-light-green">
+                <section class="w3-card w3-container w3-theme">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
@@ -48,7 +68,7 @@
                 </section>
             </div>
             <div class="w3-half">
-                <section class="w3-card w3-container w3-light-green">
+                <section class="w3-card w3-container w3-theme">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
@@ -58,34 +78,51 @@
             </div>
         </div>
     </main>
-    <aside class="w3-container w3-quarter">
-        <div class="w3-card w3-section w3-light-green">
+    <aside class="w3-container w3-quarter w3-hide-medium">
+        <div class="w3-card w3-section w3-theme">
             <p class="w3-xlarge w3-center">Календарь цветения</p>
                 <ul class="w3-container w3-ul">
                     <li class="w3-row">
-                        <p class="w3-col l3 w3-text-blue w3-large w3-center">5 июня</p>
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">5 июня</p>
                         <p class="w3-col l6 w3-large w3-center">Тополь</p>
                         <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
                     </li>
                     <li class="w3-row">
-                        <p class="w3-col l3 w3-text-blue w3-large w3-center">12 июня</p>
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">12 июня</p>
                         <p class="w3-col l6 w3-large w3-center">Ива</p>
                         <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
                     </li>
                     <li class="w3-row">
-                        <p class="w3-col l3 w3-text-blue w3-large w3-center">19 июня</p>
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">19 июня</p>
                         <p class="w3-col l6 w3-large w3-center">Вяз</p>
                         <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
                     </li>
                     <li class="w3-row">
-                        <p class="w3-col l3 w3-text-blue w3-large w3-center">26 июня</p>
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">26 июня</p>
                         <p class="w3-col l6 w3-large w3-center">Липа</p>
                         <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
                     </li>
                 </ul>
         </div>
+        <div class="w3-section w3-card w3-theme">
+            <p class="w3-xlarge w3-center">Новости ботанического сада</p>
+                <ul class="w3-container w3-ul">
+                    <li class="w3-row">
+                        <p></p>
+                    </li>
+                    <li class="w3-row">
+                        <p></p>
+                    </li>
+                    <li class="w3-row">
+                        <p></p>
+                    </li>
+                    <li class="w3-row">
+                        <p></p>
+                    </li>
+                </ul>
+        </div>
     </aside>
-    <footer class="w3-section w3-col w3-green">
+    <footer class="w3-section w3-col w3-theme-d2">
         Footer
     </footer>
 </body>
