--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="w3-display-container w3-text-white">
-        <h1 class="w3-display-middle w3-center w3-jumbo back-black-opacity w3-text-theme w3-round-large">
+        <h1 class="w3-container w3-display-middle w3-center w3-xxxlarge back-black-opacity w3-text-theme w3-round-large">
             Энциклопедия растений
         </h1>
     </header>
@@ -35,6 +35,7 @@
                 <input type="search" class="w3-bar-item" placeholder="Поиск по каталогу">
             </div>
         </div>
+        <a class="w3-button w3-hover-theme w3-display-right" onclick="showAside()">Aside</a>
     </menu>
     <main class="w3-container w3-col l9 m12">
         <div class="w3-row-padding w3-section">
@@ -78,7 +79,7 @@
             </div>
         </div>
     </main>
-    <aside class="w3-container w3-quarter w3-hide-medium">
+    <aside class="w3-container w3-quarter">
         <div class="w3-card w3-section w3-theme">
             <p class="w3-xlarge w3-center">Календарь цветения</p>
                 <ul class="w3-container w3-ul">
@@ -121,7 +122,7 @@
                     </li>
                 </ul>
         </div>
-    </aside>
+      </aside>
     <footer class="w3-section w3-col w3-theme-d2">
         Footer
     </footer>
