Исправлена ширина aside при разных размерах экрана

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </main>
-    <aside class="w3-container w3-quarter">
+    <aside class="w3-container w3-col s6 m3 l3">
         <div class="w3-card w3-section w3-theme">
             <p class="w3-xlarge w3-center">Календарь цветения</p>
                 <ul class="w3-container w3-ul">
