--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <header class="w3-display-container w3-text-white">
         <h1 class="w3-container w3-display-middle w3-center w3-xxxlarge back-black-opacity w3-text-theme w3-round-large">
-            Энциклопедия растений
+            <img src="images/logo.png" alt="" class="logo w3-margin">
+            <span style="vertical-align: text-top;">Энциклопедия растений</span>
         </h1>
     </header>
     <menu class="w3-bar w3-theme-d2 w3-top">
@@ -38,7 +39,7 @@
         <a class="w3-button w3-hover-theme w3-display-right" onclick="showAside()">Aside</a>
     </menu>
     <main class="w3-container w3-col l9 m12">
-        <div class="w3-row-padding w3-section">
+        <div class="w3-row-padding">
             <div class="w3-half">
                 <section class="w3-card-4 w3-container w3-theme w3-margin-top">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
