--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input type="search" class="w3-bar-item" placeholder="Поиск по каталогу">
             </div>
         </div>
-        <a class="w3-button w3-hover-theme w3-display-right" onclick="showAside()">Aside</a>
+        <a class="w3-button w3-hover-theme w3-display-right w3-hide-large" onclick="showAside()">Aside</a>
     </menu>
     <main class="w3-container w3-col l9 m12">
         <div class="w3-row-padding">
@@ -124,8 +124,23 @@
                 </ul>
         </div>
       </aside>
-    <footer class="w3-section w3-col w3-theme-d2">
-        Footer
+    <footer class="w3-section w3-col w3-theme-d2 w3-display-container">
+        <nav class="w3-col l2 w3-bar-block w3-margin">
+            <a class="w3-block" href="">Главная</a>
+            <a class="w3-block" href="">Каталог</a>
+            <a class="w3-block w3-margin-left" href="">Научная классификация</a>
+            <a class="w3-block w3-margin-left" href="">По жизненной форме</a>
+            <a class="w3-block w3-margin-left" href="">По времени цветения</a>
+            <a class="w3-block" href="">Календарь цветения</a>
+            <a class="w3-block" href="">Архив новостей</a>
+        </nav>
+        <div class="w3-col l9 w3-center w3-section">
+        <img src="images/foto.jpg" class="" alt="">
+        <p class="w3-text-light-gray" >
+            Сайт поддерживается и развивается Ростовским ботаническим садом • 2020 г.
+        </p>
+        </div>
+        <img src="images/logo.png" class="logo w3-display-right">
     </footer>
 </body>
 
