--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="w3-row-padding">
             <div class="w3-half">
                 <section class="w3-card-4 w3-container w3-theme w3-margin-top">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -51,7 +51,7 @@
             </div>
             <div class="w3-half">
                 <section class="w3-card w3-container w3-theme w3-margin-top">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -62,7 +62,7 @@
         <div class="w3-row-padding w3-section">
             <div class="w3-half">
                 <section class="w3-card w3-container w3-theme">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -71,7 +71,7 @@
             </div>
             <div class="w3-half">
                 <section class="w3-card w3-container w3-theme">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -136,8 +136,7 @@
         </nav>
         <div class="w3-col l9 w3-center w3-section">
         <img src="images/foto.jpg" class="" alt="">
-        <p class="w3-text-light-gray" >
-            Сайт поддерживается и развивается Ростовским ботаническим садом • 2020 г.
+        <p class="w3-text-light-gray"small       Сайт поддерживается и развивается Ростовским ботаническим садом • 2020 г.
         </p>
         </div>
         <img src="images/logo.png" class="logo w3-display-right">
