--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <input type="search" class="w3-bar-item" placeholder="Поиск по каталогу">
             </div>
         </div>
-        <a class="w3-button w3-hover-theme w3-display-right" onclick="showAside()">Aside</a>
+        <a class="w3-button w3-hover-theme w3-display-right w3-hide-large" onclick="showAside()">Aside</a>
     </menu>
     <main class="w3-container w3-col l9 m12">
         <div class="w3-row-padding w3-section">
-            <div class="w3-half">
+            <div class="w3-third">
                 <section class="w3-card-4 w3-container w3-theme w3-margin-top">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
@@ -48,7 +48,16 @@
                     </div>
                 </section>
             </div>
-            <div class="w3-half">
+            <div class="w3-third">
+                <section class="w3-card w3-container w3-theme w3-margin-top">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+            <div class="w3-third">
                 <section class="w3-card w3-container w3-theme w3-margin-top">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
@@ -59,7 +68,7 @@
             </div>
         </div>
         <div class="w3-row-padding w3-section">
-            <div class="w3-half">
+            <div class="w3-third">
                 <section class="w3-card w3-container w3-theme">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
@@ -68,7 +77,16 @@
                     </div>
                 </section>
             </div>
-            <div class="w3-half">
+            <div class="w3-third">
+                <section class="w3-card w3-container w3-theme">
+                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+            <div class="w3-third">
                 <section class="w3-card w3-container w3-theme">
                     <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
