--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="w3-row-padding w3-section">
             <div class="w3-third">
                 <section class="w3-card-4 w3-container w3-theme w3-margin-top">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small2.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -50,7 +50,7 @@
             </div>
             <div class="w3-third">
                 <section class="w3-card w3-container w3-theme w3-margin-top">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small2.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="w3-third">
                 <section class="w3-card w3-container w3-theme w3-margin-top">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small2.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -70,7 +70,7 @@
         <div class="w3-row-padding w3-section">
             <div class="w3-third">
                 <section class="w3-card w3-container w3-theme">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small2.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -79,7 +79,7 @@
             </div>
             <div class="w3-third">
                 <section class="w3-card w3-container w3-theme">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small2.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -88,7 +88,7 @@
             </div>
             <div class="w3-third">
                 <section class="w3-card w3-container w3-theme">
-                    <img src="images/Polytrichum_commune-Телефон.jpeg" alt="" class="w3-col">
+                    <img src="images/Polytrichum_commune-small2.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
                         <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
@@ -123,7 +123,7 @@
                     </li>
                 </ul>
         </div>
-        <div class="w3-section w3-card w3-theme">
+        <div class="w3-card w3-theme">
             <p class="w3-xlarge w3-center">Новости ботанического сада</p>
                 <ul class="w3-container w3-ul">
                     <li class="w3-row">
