--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </nav>
         <div class="w3-col l9 w3-center w3-section">
         <img src="images/foto.jpg" class="" alt="">
-        <p class="w3-text-light-gray"small       Сайт поддерживается и развивается Ростовским ботаническим садом • 2020 г.
+        <p class="w3-text-light-gray">Сайт поддерживается и развивается Ростовским ботаническим садом • 2020 г.
         </p>
         </div>
         <img src="images/logo.png" class="logo w3-display-right">
