Добавлена страница каталога

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <menu class="w3-bar w3-theme-d2 w3-top">
         <a href="#" class="w3-bar-item w3-button w3-hover-theme">Главная</a>
         <div class="w3-dropdown-hover">
-          <a href="" class="w3-button w3-hover-theme">Каталог</a>
+          <a href="catalog.html" class="w3-button w3-hover-theme">Каталог</a>
           <div class="w3-dropdown-content w3-bar-block w3-card-4 fixed w3-theme-d2">
             <a href="#" class="w3-bar-item w3-button w3-hover-theme">Научная классификация</a>
             <a href="#" class="w3-bar-item w3-button w3-hover-theme">По жизненной форме</a>
