Изменён макет главной страницы: 3 блока в ряд Добавлена базовая структура каталога Внесены ссылки в футер Добавлен логотип Добавлена страница элемента каталога

--- a/index.html
+++ b/index.html
@@ -40,8 +40,17 @@
     </menu>
     <main class="w3-container w3-col l9 m12">
         <div class="w3-row-padding">
-            <div class="w3-half">
+            <div class="w3-third">
                 <section class="w3-card-4 w3-container w3-theme w3-margin-top">
+                    <img src="images/Polytrichum_commune-small.jpeg" alt="" class="w3-col">
+                    <div class="w3-col w3-padding">
+                        <span class="w3-xlarge">Кукушкин лён</span>
+                        <p class="w3-small">Стройные коричневатые стебли кукушкиного льна покрыты небольшими тёмно-зелёными листьями и немного напоминают растение льна в миниатюре. Отсюда происходит вторая часть названия — лён. Коробочки, появляющиеся на женских растениях, напоминают кукушку, сидящую на «шесте»</p>
+                    </div>
+                </section>
+            </div>
+            <div class="w3-third">
+                <section class="w3-card w3-container w3-theme w3-margin-top">
                     <img src="images/Polytrichum_commune-small.jpeg" alt="" class="w3-col">
                     <div class="w3-col w3-padding">
                         <span class="w3-xlarge">Кукушкин лён</span>
@@ -135,8 +144,8 @@
       </aside>
     <footer class="w3-section w3-col w3-theme-d2 w3-display-container">
         <nav class="w3-col l2 w3-bar-block w3-margin">
-            <a class="w3-block" href="">Главная</a>
-            <a class="w3-block" href="">Каталог</a>
+            <a class="w3-block" href="index.html">Главная</a>
+            <a class="w3-block" href="catalog.html">Каталог</a>
             <a class="w3-block w3-margin-left" href="">Научная классификация</a>
             <a class="w3-block w3-margin-left" href="">По жизненной форме</a>
             <a class="w3-block w3-margin-left" href="">По времени цветения</a>
