--- a/catalog.html
+++ b/catalog.html
@@ -15,11 +15,12 @@
 <body>
     <header class="w3-display-container w3-text-white">
         <h1 class="w3-container w3-display-middle w3-center w3-xxxlarge back-black-opacity w3-text-theme w3-round-large">
-            Энциклопедия растений
+            <img src="images/logo.png" alt="" class="logo w3-margin">
+            <span style="vertical-align: text-top;">Энциклопедия растений</span>
         </h1>
     </header>
     <menu class="w3-bar w3-theme-d2 w3-top">
-        <a href="#" class="w3-bar-item w3-button w3-hover-theme">Главная</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-hover-theme">Главная</a>
         <div class="w3-dropdown-hover">
           <a href="catalog.html" class="w3-button w3-hover-theme">Каталог</a>
           <div class="w3-dropdown-content w3-bar-block w3-card-4 fixed w3-theme-d2">
@@ -39,11 +40,32 @@
     </menu>
     <main class="w3-container w3-col l9 m12">
         <div class="w3-row-padding w3-section">
-            <div class="w3-half">
-                <section class="w3-card-4 w3-container w3-theme w3-margin-top">
+            <div class="w3-third">
+                <h2 class="w3-text-theme w3-center">Научная классификация</h2>
+                <section class="w3-card-4 w3-bar-block w3-theme w3-margin-top">
+                    <a class="w3-bar-item w3-button" href="chlorophyta.html">Водоросли</a>
+                    <a class="w3-bar-item w3-button">Мхи</a>
+                    <a class="w3-bar-item w3-button">Хвойные</a>
+                    <a class="w3-bar-item w3-button">Цветковые</a>
+                </section>
             </div>
-            <div class="w3-half">
-                <section class="w3-card-4 w3-container w3-theme w3-margin-top">
+            <div class="w3-third">
+                <h2 class="w3-text-theme w3-center">По жизненной форме</h2>
+                <section class="w3-card-4 w3-bar-block w3-theme w3-margin-top">
+                    <a class="w3-bar-item w3-button">Травы</a>
+                    <a class="w3-bar-item w3-button">Кустарники</a>
+                    <a class="w3-bar-item w3-button">Деревья</a>
+                    <a class="w3-bar-item w3-button">Лианы</a>
+                </section>
+            </div>
+            <div class="w3-third">
+                <h2 class="w3-text-theme w3-center">По времени цветения</h2>
+                <section class="w3-card-4 w3-bar-block w3-theme w3-margin-top">
+                    <a class="w3-bar-item w3-button w3-theme-d2">Май</a>
+                    <a class="w3-bar-item w3-button">Июнь</a>
+                    <a class="w3-bar-item w3-button">Июль</a>
+                    <a class="w3-bar-item w3-button">Август</a>
+                </section>
             </div>
         </div>
     </main>
@@ -91,8 +113,22 @@
                 </ul>
         </div>
       </aside>
-      <footer class="w3-section w3-col w3-theme-d2">
-        Footer
+      <footer class="w3-section w3-col w3-theme-d2 w3-display-container">
+        <nav class="w3-col l2 w3-bar-block w3-margin">
+            <a class="w3-block" href="index.html">Главная</a>
+            <a class="w3-block" href="catalog.html">Каталог</a>
+            <a class="w3-block w3-margin-left" href="">Научная классификация</a>
+            <a class="w3-block w3-margin-left" href="">По жизненной форме</a>
+            <a class="w3-block w3-margin-left" href="">По времени цветения</a>
+            <a class="w3-block" href="">Календарь цветения</a>
+            <a class="w3-block" href="">Архив новостей</a>
+        </nav>
+        <div class="w3-col l9 w3-center w3-section">
+        <img src="images/foto.jpg" class="" alt="">
+        <p class="w3-text-light-gray">Сайт поддерживается и развивается Ростовским ботаническим садом • 2020 г.
+        </p>
+        </div>
+        <img src="images/logo.png" class="logo w3-display-right">
     </footer>
 </body>
 </html>
