--- a/catalog.html
+++ b/catalog.html
@@ -69,9 +69,9 @@
             </div>
         </div>
     </main>
-    <aside class="w3-container w3-quarter">
+    <aside class="w3-container w3-col s6 m3 l3">
         <div class="w3-card w3-section w3-theme">
-            <p class="w3-xlarge w3-center">Календарь цветения</p>
+            <p class="w3-xlarge w3-center"><a href="calendar.html">Календарь цветения</a></p>
                 <ul class="w3-container w3-ul">
                     <li class="w3-row">
                         <p class="w3-col l3 w3-text-indigo w3-large w3-center">5 июня</p>
@@ -98,17 +98,17 @@
         <div class="w3-card w3-theme">
             <p class="w3-xlarge w3-center">Новости ботанического сада</p>
                 <ul class="w3-container w3-ul">
-                    <li class="w3-row">
-                        <p></p>
+                    <li class="w3-row w3-center">
+                        <a href="">Появилось 3 новых сорта роз</a>
                     </li>
-                    <li class="w3-row">
-                        <p></p>
+                    <li class="w3-row w3-center">
+                        <a href="">Зацвёл редкий цветок</a>
                     </li>
-                    <li class="w3-row">
-                        <p></p>
+                    <li class="w3-row w3-center">
+                        <a href="">Требуется помощь в уборке сада</a>
                     </li>
-                    <li class="w3-row">
-                        <p></p>
+                    <li class="w3-row w3-center">
+                        <a href="">Открыт набор на курсы флористов</a>
                     </li>
                 </ul>
         </div>
@@ -120,7 +120,7 @@
             <a class="w3-block w3-margin-left" href="">Научная классификация</a>
             <a class="w3-block w3-margin-left" href="">По жизненной форме</a>
             <a class="w3-block w3-margin-left" href="">По времени цветения</a>
-            <a class="w3-block" href="">Календарь цветения</a>
+            <a class="w3-block" href="calendar.html">Календарь цветения</a>
             <a class="w3-block" href="">Архив новостей</a>
         </nav>
         <div class="w3-col l9 w3-center w3-section">
