--- a/chlorophyta.html
+++ b/chlorophyta.html
@@ -59,50 +59,50 @@
             </section>
         </div>
     </main>
-    <aside class="w3-container w3-quarter">
+    <aside class="w3-container w3-col s6 m3 l3">
         <div class="w3-card w3-section w3-theme">
-            <p class="w3-xlarge w3-center">Календарь цветения</p>
-            <ul class="w3-container w3-ul">
-                <li class="w3-row">
-                    <p class="w3-col l3 w3-text-indigo w3-large w3-center">5 июня</p>
-                    <p class="w3-col l6 w3-large w3-center">Тополь</p>
-                    <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
-                </li>
-                <li class="w3-row">
-                    <p class="w3-col l3 w3-text-indigo w3-large w3-center">12 июня</p>
-                    <p class="w3-col l6 w3-large w3-center">Ива</p>
-                    <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
-                </li>
-                <li class="w3-row">
-                    <p class="w3-col l3 w3-text-indigo w3-large w3-center">19 июня</p>
-                    <p class="w3-col l6 w3-large w3-center">Вяз</p>
-                    <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
-                </li>
-                <li class="w3-row">
-                    <p class="w3-col l3 w3-text-indigo w3-large w3-center">26 июня</p>
-                    <p class="w3-col l6 w3-large w3-center">Липа</p>
-                    <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
-                </li>
-            </ul>
+            <p class="w3-xlarge w3-center"><a href="calendar.html">Календарь цветения</a></p>
+                <ul class="w3-container w3-ul">
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">5 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Тополь</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">12 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Ива</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">19 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Вяз</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                    <li class="w3-row">
+                        <p class="w3-col l3 w3-text-indigo w3-large w3-center">26 июня</p>
+                        <p class="w3-col l6 w3-large w3-center">Липа</p>
+                        <img src="images/Polytrichum_commune-small.jpeg" class="w3-col l3" alt="">
+                    </li>
+                </ul>
         </div>
         <div class="w3-card w3-theme">
             <p class="w3-xlarge w3-center">Новости ботанического сада</p>
-            <ul class="w3-container w3-ul">
-                <li class="w3-row">
-                    <p></p>
-                </li>
-                <li class="w3-row">
-                    <p></p>
-                </li>
-                <li class="w3-row">
-                    <p></p>
-                </li>
-                <li class="w3-row">
-                    <p></p>
-                </li>
-            </ul>
+                <ul class="w3-container w3-ul">
+                    <li class="w3-row w3-center">
+                        <a href="">Появилось 3 новых сорта роз</a>
+                    </li>
+                    <li class="w3-row w3-center">
+                        <a href="">Зацвёл редкий цветок</a>
+                    </li>
+                    <li class="w3-row w3-center">
+                        <a href="">Требуется помощь в уборке сада</a>
+                    </li>
+                    <li class="w3-row w3-center">
+                        <a href="">Открыт набор на курсы флористов</a>
+                    </li>
+                </ul>
         </div>
-    </aside>
+      </aside>
     <footer class="w3-section w3-col w3-theme-d2 w3-display-container">
         <nav class="w3-col l2 w3-bar-block w3-margin">
             <a class="w3-block" href="index.html">Главная</a>
@@ -110,8 +110,8 @@
             <a class="w3-block w3-margin-left">Научная классификация</a>
             <a class="w3-block w3-margin-left">По жизненной форме</a>
             <a class="w3-block w3-margin-left">По времени цветения</a>
-            <a class="w3-block">Календарь цветения</a>
-            <a class="w3-block">Архив новостей</a>
+            <a class="w3-block" href="calendar.html">Календарь цветения</a>
+            <a class="w3-block" href="">Архив новостей</a>
         </nav>
         <div class="w3-col l9 w3-center w3-section">
             <img src="images/foto.jpg" class="" alt="">
