Изменены цвета календаря и подсказки

--- a/calendar.html
+++ b/calendar.html
@@ -43,7 +43,7 @@
         <div class="w3-section">
             <section class="w3-card w3-padding w3-theme w3-container">
                 <h1 class="w3-center">Календарь цветения</h1>
-                <table class="w3-center w3-col l3 w3-large w3-margin padding-child">
+                <table class="w3-center w3-col l3 w3-large w3-margin padding-child w3-theme-l1">
                     <tr>
                         <td></td>
                         <td></td>
@@ -90,17 +90,17 @@
                         <td></td>
                     </tr>
                 </table>
-                <div id="tooltips" class="w3-margin w3-container w3-col l4">
+                <div id="tooltips" class="w3-margin w3-container w3-col l4 w3-centered">
                     <div class="w3-card-4 w3-hide" id="t5">
                         <img src="images/Polytrichum_commune-small.jpeg" style="width: 100%">
-                        <div class="w3-container w3-center w3-row w3-padding">
-                            <div class="w3-half">5 июня</div>
-                            <div class="w3-half">Тополь</div>
+                        <div class="w3-center w3-row">
+                            <div class="w3-half w3-theme-light w3-padding">5 июня</div>
+                            <div class="w3-half w3-padding">Тополь</div>
                         </div>
                     </div>
                     <div class="w3-card-4 w3-hide" id="t12">
                         <img src="images/Polytrichum_commune-small.jpeg" style="width: 100%">
-                        <div class="w3-container w3-center w3-row w3-padding">
+                        <div class="w3-center w3-row w3-padding">
                             <div class="w3-half">12 июня</div>
                             <div class="w3-half">Ива</div>
                         </div>
