Переделан заголовок в aside, исправлены цвета подсказок в календаре

--- a/chlorophyta.html
+++ b/chlorophyta.html
@@ -61,7 +61,7 @@
     </main>
     <aside class="w3-container w3-col s6 m3 l3">
         <div class="w3-card w3-section w3-theme">
-            <p class="w3-xlarge w3-center"><a href="calendar.html">Календарь цветения</a></p>
+            <div class="w3-xlarge w3-center w3-padding"><a href="calendar.html">Календарь цветения</a></div>
                 <ul class="w3-container w3-ul">
                     <li class="w3-row">
                         <p class="w3-col l3 w3-text-indigo w3-large w3-center">5 июня</p>
@@ -86,7 +86,7 @@
                 </ul>
         </div>
         <div class="w3-card w3-theme">
-            <p class="w3-xlarge w3-center">Новости ботанического сада</p>
+            <div class="w3-xlarge w3-center w3-padding">Новости ботанического сада</div>
                 <ul class="w3-container w3-ul">
                     <li class="w3-row w3-center">
                         <a href="">Появилось 3 новых сорта роз</a>
