Исправлено: копирование адреса работает на всех страницах

--- a/chlorophyta.html
+++ b/chlorophyta.html
@@ -38,7 +38,7 @@
                 <input type="search" class="w3-bar-item" placeholder="Поиск по каталогу">
             </div>
         </div>
-        <div class="w3-padding w3-small w3-display-right" onclick="">Написать нам: botsad-don@gmail.com</div>
+        <div class="w3-padding w3-small w3-display-right" onclick="copy()" id="email">Написать нам: botsad-don@gmail.com</div>
         <a class="w3-button w3-hover-theme w3-display-right w3-hide-large" onclick="showAside()">Aside</a>
     </menu>
     <main class="w3-container w3-col l9 m12">
